--- a/source/PaperPusher/PaperPusher/App.config
+++ b/source/PaperPusher/PaperPusher/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+  </configSections>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+
+  <log4net>
+    <appender name="LogFile" type="log4net.Appender.RollingFileAppender, log4net">
+      <file value="logs/LogFile.txt"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Once"/>
+      <maxSizeRollBackups value="5"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%5thread] [%-5level] %logger: %message%newline"/>
+      </layout>
+    </appender>
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="LogFile"/>
+    </root>
+  </log4net>
+
 </configuration>
