--- a/source/PaperPusher/PaperPusher/packages.config
+++ b/source/PaperPusher/PaperPusher/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Caliburn.Micro" version="3.0.0" targetFramework="net461" />
   <package id="Caliburn.Micro.Core" version="3.0.0" targetFramework="net461" />
+  <package id="Fody" version="1.29.2" targetFramework="net461" developmentDependency="true" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
+  <package id="PropertyChanged.Fody" version="1.51.0" targetFramework="net461" developmentDependency="true" />
 </packages>
