Image zoom and pan.

--- a/source/PaperPusher/PaperPusher/PaperPusher.csproj
+++ b/source/PaperPusher/PaperPusher/PaperPusher.csproj
@@ -91,6 +91,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ApplicationBootstrapper.cs" />
+    <Compile Include="Controls\ZoomBorder.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
