--- a/source/PaperPusher/PaperPusher/packages.config
+++ b/source/PaperPusher/PaperPusher/packages.config
@@ -7,4 +7,6 @@
   <package id="Magick.NET-Q8-AnyCPU" version="7.0.0.0104" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="1.51.0" targetFramework="net461" developmentDependency="true" />
+  <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net461" />
+  <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net461" />
 </packages>
