--- a/source/PaperPusher/PaperPusher/PaperPusher.csproj
+++ b/source/PaperPusher/PaperPusher/PaperPusher.csproj
@@ -105,11 +105,11 @@
     </ApplicationDefinition>
     <Compile Include="ApplicationBootstrapper.cs" />
     <Compile Include="Controls\ZoomBorder.cs" />
-    <Compile Include="DeleteOperation.cs" />
+    <Compile Include="Operations\DeleteOperation.cs" />
     <Compile Include="IOperation.cs" />
     <Compile Include="CaliburnLog4netLogger.cs" />
-    <Compile Include="MoveOperation.cs" />
-    <Compile Include="RenameAndMoveOperation.cs" />
+    <Compile Include="Operations\MoveOperation.cs" />
+    <Compile Include="Operations\RenameAndMoveOperation.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Utility\SendFileToRecycleBin.cs" />
