Make trash folder a setting.

--- a/source/PaperPusher/PaperPusher/App.config
+++ b/source/PaperPusher/PaperPusher/App.config
@@ -35,6 +35,9 @@
       <setting name="TargetRootDirectory" serializeAs="String">
         <value />
       </setting>
+      <setting name="TrashFolderName" serializeAs="String">
+        <value>c:\temp\PaperPusherTrash</value>
+      </setting>
     </PaperPusher.Properties.Settings>
   </userSettings>
 </configuration>
