--- a/source/PaperPusher/PaperPusher/PaperPusher.csproj
+++ b/source/PaperPusher/PaperPusher/PaperPusher.csproj
@@ -105,12 +105,7 @@
     </ApplicationDefinition>
     <Compile Include="ApplicationBootstrapper.cs" />
     <Compile Include="Controls\ZoomBorder.cs" />
-    <Compile Include="Operations\DeleteOperation.cs" />
-    <Compile Include="IOperation.cs" />
     <Compile Include="CaliburnLog4netLogger.cs" />
-    <Compile Include="Operations\MoveOperation.cs" />
-    <Compile Include="Operations\RenameAndMoveOperation.cs" />
-    <Compile Include="Session.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Utility\SendFileToRecycleBin.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
@@ -176,6 +171,12 @@
     <Resource Include="Art\unknown_icon_256.png" />
     <Resource Include="Art\unknown_icon_512.png" />
     <Resource Include="Art\unknown_icon_64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PaperPusher.Core\PaperPusher.Core.csproj">
+      <Project>{19138ef3-6500-4561-83ce-149fd5b5ece3}</Project>
+      <Name>PaperPusher.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.1.29.2\build\dotnet\Fody.targets" Condition="Exists('..\packages\Fody.1.29.2\build\dotnet\Fody.targets')" />
