--- a/source/PaperPusher/PaperPusher.Core.Tests/PaperPusher.Core.Tests.csproj
+++ b/source/PaperPusher/PaperPusher.Core.Tests/PaperPusher.Core.Tests.csproj
@@ -54,6 +54,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Operations\MoveOperationTests.cs" />
     <Compile Include="Operations\DeleteOperationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestInit.cs" />
