Naming operations stack.

--- a/source/PaperPusher/PaperPusher.Core.Tests/PaperPusher.Core.Tests.csproj
+++ b/source/PaperPusher/PaperPusher.Core.Tests/PaperPusher.Core.Tests.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ParkSquare.Testing.Helpers, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ParkSquare.Testing.Helpers.2.1.51.0\lib\portable-net4+sl5\ParkSquare.Testing.Helpers.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Shouldly, Version=2.7.0.0, Culture=neutral, PublicKeyToken=6042cbcb05cbc941, processorArchitecture=MSIL">
       <HintPath>..\packages\Shouldly.2.7.0\lib\net40\Shouldly.dll</HintPath>
       <Private>True</Private>
