--- a/source/PaperPusher/PaperPusher.Core/PaperPusher.Core.csproj
+++ b/source/PaperPusher/PaperPusher.Core/PaperPusher.Core.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Operations\MoveOperation.cs" />
     <Compile Include="Operations\RenameAndMoveOperation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Session.cs" />
+    <Compile Include="OperationsStack.cs" />
     <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
