--- a/source/PaperPusher/PaperPusher.Core.Tests/PaperPusher.Core.Tests.csproj
+++ b/source/PaperPusher/PaperPusher.Core.Tests/PaperPusher.Core.Tests.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="Operations\MoveOperationTests.cs" />
     <Compile Include="Operations\DeleteOperationTests.cs" />
+    <Compile Include="Operations\RenameAndMoveOperationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestInit.cs" />
   </ItemGroup>
