Move pdf rendering to image into Core. Fixes #16

--- a/source/PaperPusher/PaperPusher.Core/PaperPusher.Core.csproj
+++ b/source/PaperPusher/PaperPusher.Core/PaperPusher.Core.csproj
@@ -30,11 +30,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ghostscript.NET, Version=1.2.1.0, Culture=neutral, PublicKeyToken=f85051de34525b59, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ghostscript.NET.1.2.1\lib\net40\Ghostscript.NET.dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Magick.NET-Q8-AnyCPU, Version=7.9.0.0, Culture=neutral, PublicKeyToken=2004825badfa91ec, processorArchitecture=MSIL">
+      <HintPath>..\packages\Magick.NET-Q8-AnyCPU.7.9.0.2\lib\net40\Magick.NET-Q8-AnyCPU.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +54,9 @@
     <Compile Include="Operations\DeleteOperation.cs" />
     <Compile Include="Operations\MoveOperation.cs" />
     <Compile Include="Operations\RenameAndMoveOperation.cs" />
+    <Compile Include="PdfRendering\GhostscriptRenderer.cs" />
+    <Compile Include="PdfRendering\IPdfRenderer.cs" />
+    <Compile Include="PdfRendering\MagickRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OperationsStack.cs" />
     <Compile Include="Settings.cs" />
