--- a/source/PaperPusher/PaperPusher.Core/packages.config
+++ b/source/PaperPusher/PaperPusher.Core/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Ghostscript.NET" version="1.2.1" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
+  <package id="Magick.NET-Q8-AnyCPU" version="7.9.0.2" targetFramework="net461" />
 </packages>
