Add IronPdf renderer.

--- a/source/PaperPusher/PaperPusher.Core/PaperPusher.Core.csproj
+++ b/source/PaperPusher/PaperPusher.Core/PaperPusher.Core.csproj
@@ -33,6 +33,12 @@
     <Reference Include="Ghostscript.NET, Version=1.2.1.0, Culture=neutral, PublicKeyToken=f85051de34525b59, processorArchitecture=MSIL">
       <HintPath>..\packages\Ghostscript.NET.1.2.1\lib\net40\Ghostscript.NET.dll</HintPath>
     </Reference>
+    <Reference Include="IronPdf, Version=2020.3.2.0, Culture=neutral, PublicKeyToken=94e1c31412563c75, processorArchitecture=MSIL">
+      <HintPath>..\packages\IronPdf.2020.3.2\lib\net40\IronPdf.dll</HintPath>
+    </Reference>
+    <Reference Include="IronPdf.Assets.Rendering.Windows, Version=18.0.0.0, Culture=neutral, PublicKeyToken=94e1c31412563c75, processorArchitecture=MSIL">
+      <HintPath>..\packages\Iron.Assets.Rendering.Windows.18.0.1\lib\net40\IronPdf.Assets.Rendering.Windows.dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
@@ -42,6 +48,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,6 +63,7 @@
     <Compile Include="Operations\RenameAndMoveOperation.cs" />
     <Compile Include="PdfRendering\GhostscriptRenderer.cs" />
     <Compile Include="PdfRendering\IPdfRenderer.cs" />
+    <Compile Include="PdfRendering\IronPdfRenderer.cs" />
     <Compile Include="PdfRendering\MagickRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OperationsStack.cs" />
